@@ -1,5 +1,11 @@
 2007-06-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
+	* [w3m-dev 04279] charset
+	* libwc/ces.h, libwc/charset.c: set charset to Shift_JIS, when locale 
+	  is japanese, jp_JP.PCK, ja_JP.IBM-932, ja_JP.IBM-943, or windows-31j.
+
+2007-06-07  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
+
 	* [w3m-dev 04278] Re: segfault on CentOS4.5/libgc6.8
 	* term.c: add handling xterm-incompatible terminals without gpm.
 
@@ -8927,4 +8933,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.1000 2007/06/07 10:54:10 inu Exp $
+$Id: ChangeLog,v 1.1001 2007/06/07 10:59:51 inu Exp $
